welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
retourne()
while(!dosMur()){
while (!estSurBiscuit()){
	avance()
}
while (estSurBiscuit()){
	prendBiscuit();
	retourne();
	avance();
	avance();
	avance();
	avance();
	avance();
	poseBiscuit();
	retourne();
	avance();
	
}
}